# streambot-switch-help

./: .core.env  .env  .gitignore  .gitmodules  Makefile  README.md  prospector.yaml  pyproject.toml  pytest.ini
.buildkite/scripts/: deploy.sh
.github/: CODEOWNERS
behave_tests/: README.md  __init__.py  environment.py
behave_tests/features/: empty.feature  test_project_streaming.feature
behave_tests/features/example_data/: foo_bar_data.json
behave_tests/steps/: __init__.py  streaming_steps.py
deploy/: README.md  run.sh
deploy/ansible/: ansible.cfg  deploy.yml  requirements.yml
deploy/ansible/vars/: cloudFormation.yml  main.yml
deploy/ansible/vars/env_type/: b2.yml  d2.yml  p2.yml  q2.yml
deploy/cloudFormation/: core.CF.j2.yml  monitoring.CF.j2.yml  parent.CF.j2.yml
tests/: README.md  __init__.py  test_daily_snapshotter_lambda.py  test_foo_bar_transformer_lambda.py  test_very_little.py
tests/foo_bar_transformer_lambda_tests_data/expected_results/: test1_output.json  test2_output.json  test3_output.json
tests/foo_bar_transformer_lambda_tests_data/input/: test1_sns_message_decoded.json  test2_sns_message_decoded.json
tests/snapshotter_tests_data/expected_results/: final_table_data.json
tests/snapshotter_tests_data/input/: athena_query_results_max_date.json  athena_query_results_select_keys.json  athena_query_start.json  athena_query_status_select_keys.json  test_fetch_stream_tables.json
